--- a/scripts/bosh-bootloader/upload-latest-trusty-stemcell/task.yml
+++ b/scripts/bosh-bootloader/upload-latest-trusty-stemcell/task.yml
@@ -44,3 +44,5 @@ params:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
   # - Key content or path to the file containing credentials downloaded from GCP
   # - Path is relative to the BBL_STATE_DIR specified a
+  #
+  VERSION:
