--- a/pipelines/concourse.yml
+++ b/pipelines/concourse.yml
@@ -58,6 +58,7 @@ jobs:
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
       INFRASTRUCTURE: google
+      VERSION: 3568.16
   - task: copy-bosh-files
     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     input_mapping:
