wget isn't installed by default on debian
Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/dockerfiles/releng-tools/Dockerfile
+++ b/dockerfiles/releng-tools/Dockerfile
@@ -9,6 +9,7 @@ RUN \
       apt-get -qqy install --fix-missing \
             apt-transport-https \
             unzip \
+            wget \
       && \
       apt-get clean
 
