--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -1,10 +1,27 @@
 groups:
+- name: terraforming-gcp
+  jobs:
+  - create-env-gcp
+  - prepare-gcp
+
 - name: terraforming
   jobs:
   - terraforming-aws
   - terraforming-azure
-  - terraforming-gcp
   - terraforming-vsphere
+
+resource_types:
+- name: terraform
+  type: docker-image
+  source:
+    repository: ljfranklin/terraform-resource:beta-backend
+    tag: 0.11.3
+
+- name: pivnet
+  type: docker-image
+  source:
+    repository: pivotalcf/pivnet-resource
+    tag: latest-final
 
 resources:
 - name: terraforming-aws
@@ -28,12 +45,48 @@ resources:
     uri: git@github.com:pivotal-cf/terraforming-gcp.git
     private_key: {{cf_infra_bot_user_github_private_key}}
 
+- name: env-state-gcp
+  type: terraform
+  source:
+    storage:
+      backend_type: gcs
+      backend_config:
+        bucket: infra-tf-states
+        prefix: gcp
+        region: us-central1
+        credentials: {{cf_infra_gcp_service_account_key}}
+
+- name: opsman-image
+  type: pivnet
+  source:
+    product_slug: ops-manager
+    api_token: ((pivnet_token))
+    product_version: ^\d+\.\d+\.\d+
+    sort_by: semver
+
+- name: srt
+  type: pivnet
+  source:
+    api_token: ((pivnet_token))
+    product_slug: cf
+    product_version: ^2\.2\.\d+$
+    sort_by: semver
+
 - name: terraforming-vsphere
   type: git
   source:
     branch: master
     uri: git@github.com:pivotal-cf/terraforming-vsphere.git
     private_key: {{cf_infra_bot_user_github_private_key}}
+
+- name: pcf-releng-ci
+  type: git
+  source:
+    uri: git@github.com:pivotal-cf/pcf-releng-ci.git
+    private_key: {{cf_infra_bot_user_github_private_key}}
+    ignore_paths:
+    - pipelines
+    - ci_screen
 
 - name: infrastructure-ci
   type: git
@@ -42,6 +95,60 @@ resources:
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
 
 jobs:
+- name: create-env-gcp
+  serial: true
+  public: false
+  plan:
+  - aggregate:
+    - get: terraforming-gcp
+      trigger: true
+    - get: ci
+      resource: infrastructure-ci
+    - get: opsman-image
+      params:
+        globs:
+        - '*GCP.yml'
+  - task: setup-terraform-vars
+    file: ci/scripts/terraforming/gcp/setup-terraform-vars/task.yml
+    params:
+      GCP_PROJECT_ID: {{cf_infra_gcp_project_id}}
+      GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
+      GCP_SSL_CERT: {{ssl_cert}}
+      GCP_SSL_PRIVATE_KEY: {{ssl_private_key}}
+  - put: env-state-gcp
+    params:
+      generate_random_name: true
+      var_files: [tfvars/terraform.tfvars]
+      terraform_source: terraforming-gcp
+      delete_on_failure: true
+
+- name: prepare-gcp
+  serial: true
+  plan:
+  - aggregate:
+    - get: terraforming-gcp
+      passed: [create-env-gcp]
+    - get: env-state-gcp
+      trigger: true
+    - get: ci
+      resource: infrastructure-ci
+    - get: pcf-releng-ci
+    - get: srt
+      params:
+        globs:
+        - srt-*.pivotal
+  - task: download-stemcell
+    file: pcf-releng-ci/tasks/configuration/download-bosh-io-stemcell/task.yml
+    input_mapping:
+      ert-product: srt
+    params:
+      IAAS_TYPE: gcp
+  - task: upload-configure-stage
+    file: ci/scripts/terraforming/gcp/upload-configure-state/task.yml
+    params:
+      OM_USERNAME: {{om_username}}
+      OM_PASSWORD: {{om_password}}
+
 - name: terraforming-aws
   serial: true
   public: false
@@ -76,23 +183,6 @@ jobs:
       AZURE_CLIENT_ID: {{azure_client_id}}
       AZURE_CLIENT_SECRET: {{azure_client_secret}}
       AZURE_VM_ADMIN_PASSWORD: {{azure_vm_admin_password}}
-
-- name: terraforming-gcp
-  serial: true
-  public: false
-  plan:
-  - aggregate:
-    - get: terraforming-gcp
-      trigger: true
-    - get: ci
-      resource: infrastructure-ci
-  - task: apply-and-destroy
-    file: ci/scripts/terraforming/gcp/task.yml
-    params:
-      GCP_PROJECT_ID: {{cf_infra_gcp_project_id}}
-      GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
-      GCP_SSL_CERT: {{ssl_cert}}
-      GCP_SSL_PRIVATE_KEY: {{ssl_private_key}}
 
 - name: terraforming-vsphere
   serial: true
