use rebase true when pushing bbl-state

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -2052,6 +2052,7 @@ jobs:
       put: infrastructure-ci-bbl-states
       params:
         repository: updated-bbl-states
+        rebase: true
 
 - name: github-release
   plan:
