use dash not underscore
[#157747348]

--- a/scripts/terraforming/gcp/setup-terraform-vars/task.yml
+++ b/scripts/terraforming/gcp/setup-terraform-vars/task.yml
@@ -9,7 +9,7 @@ image_resource:
 inputs:
 - name: terraforming-gcp
 - name: ci
-- name: opsman_image
+- name: opsman-image
 
 outputs:
 - name: tfvars
