--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -14,8 +14,8 @@ resource_types:
 - name: terraform
   type: docker-image
   source:
-    repository: ljfranklin/terraform-resource:beta-backend
-    tag: 0.11.3
+    repository: ljfranklin/terraform-resource
+    tag: beta-backend
 
 - name: pivnet
   type: docker-image
@@ -48,13 +48,12 @@ resources:
 - name: env-state-gcp
   type: terraform
   source:
-    storage:
-      backend_type: gcs
-      backend_config:
-        bucket: infra-tf-states
-        prefix: gcp
-        region: us-central1
-        credentials: {{cf_infra_gcp_service_account_key}}
+    backend_type: gcs
+    backend_config:
+      bucket: infra-tf-states
+      prefix: gcp
+      region: us-central1
+      credentials: {{cf_infra_gcp_service_account_key}}
 
 - name: opsman-image
   type: pivnet
