--- a/dockerfiles/releng-tools/Dockerfile
+++ b/dockerfiles/releng-tools/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:latest
+FROM python:3.6.5-jessie
 MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 
 ENV OM_VERSION 0.37.0
@@ -42,3 +42,6 @@ RUN export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)" && \
   echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
   curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
   apt-get update -y && apt-get install google-cloud-sdk -y
+
+# Install yq
+RUN pip install yq
