pipe gcp_key into terraform resource source config
Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -53,7 +53,8 @@ resources:
       bucket: infra-tf-states
       prefix: gcp
       region: us-central1
-      credentials: {{cf_infra_gcp_service_account_key}}
+      credentials: |
+        {{cf_infra_gcp_service_account_key}}
 
 - name: opsman-image
   type: pivnet
