correctly pass env-state thru terraforming-gcp
[#157747348]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -129,6 +129,7 @@ jobs:
     - get: terraforming-gcp
       passed: [create-env-gcp]
     - get: env-state-gcp
+      passed: [create-env-gcp]
       trigger: true
     - get: ci
       resource: infrastructure-ci
