--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -144,8 +144,20 @@ jobs:
       ert-product: srt
     params:
       IAAS_TYPE: gcp
+  - task: add-to-gcp-dns
+    file: ci/scripts/common/manage-gcp-dns/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-w-gcloud
+    params:
+      GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
+      GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
+      GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
+      GCP_DNS_ZONE_NAME: infrastructure
+      GCP_DNS_RECORD_SET_NAME: bbl-downstream.infrastructure.cf-app.com
+      ACTION: add
+    input_mapping:
+      env-state: env-state-gcp
   - task: upload-configure-stage
-    file: ci/scripts/terraforming/gcp/upload-configure-state/task.yml
+    file: ci/scripts/terraforming/gcp/upload-configure-stage/task.yml
     params:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
