rely on terraform resource for env-metadata transform
[#157747348]

Signed-off-by: Connor Braa <connor.braa@gmail.com>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -160,6 +160,8 @@ jobs:
     params:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
+    input_mapping:
+      env-state: env-state-gcp
 
 - name: terraforming-aws
   serial: true
