--- a/scripts/terraforming/gcp/upload-configure-stage/task.yml
+++ b/scripts/terraforming/gcp/upload-configure-stage/task.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: cfinfrastructure/releng-tools
 
 inputs:
-- name: env-state-gcp
+- name: env-state
 - name: ci
 - name: stemcell
 - name: srt
