--- a/scripts/common/manage-gcp-dns/task-terraforming.yml
+++ b/scripts/common/manage-gcp-dns/task-terraforming.yml
@@ -16,6 +16,7 @@ params:
   GCP_DNS_SERVICE_ACCOUNT_KEY:
   GCP_DNS_ZONE_NAME:
   GCP_DNS_RECORD_SET_NAME:
+  GCP_DNS_SUFFIX:
   GCP_DNS_RECORD_TTL: 300
   ACTION:
 
