--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -4,6 +4,7 @@ groups:
   - create-env-gcp
   - prepare-gcp
   - deploy-gcp
+  - destroy-gcp
 
 - name: terraforming
   jobs:
@@ -187,6 +188,50 @@ jobs:
       OM_PASSWORD: {{om_password}}
     input_mapping:
       env-state: env-state-gcp
+
+- name: destroy-gcp
+  serial: true
+  plan:
+  - aggregate:
+    - get: terraforming-gcp
+      passed: [deploy-gcp]
+    - get: env-state-gcp
+      passed: [deploy-gcp]
+      trigger: true
+    - get: ci
+      resource: infrastructure-ci
+  - task: setup-terraform-vars
+    file: ci/scripts/terraforming/gcp/setup-terraform-vars/task.yml
+    params:
+      GCP_PROJECT_ID: {{cf_infra_gcp_project_id}}
+      GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
+      GCP_SSL_CERT: {{ssl_cert}}
+      GCP_SSL_PRIVATE_KEY: {{ssl_private_key}}
+  - task: delete-installation
+    file: ci/scripts/terraforming/gcp/delete-installation/task.yml
+    params:
+      OM_USERNAME: {{om_username}}
+      OM_PASSWORD: {{om_password}}
+    input_mapping:
+      env-state: env-state-gcp
+  - task: add-to-gcp-dns
+    file: ci/scripts/common/manage-gcp-dns/task-terraforming.yml
+    params:
+      GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
+      GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
+      GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
+      GCP_DNS_ZONE_NAME: infrastructure
+      GCP_DNS_SUFFIX: gcp.infrastructure.cf-app.com
+      ACTION: remove
+    input_mapping:
+      env-state: env-state-gcp
+  - put: env-state-gcp
+    params:
+      var_files: [tfvars/terraform.tfvars]
+      terraform_source: terraforming-gcp
+      action: destroy
+    get_params:
+      action: destroy
 
 - name: terraforming-aws
   serial: true
