--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -218,7 +218,7 @@ jobs:
       OM_PASSWORD: {{om_password}}
     input_mapping:
       env-state: env-state-gcp
-  - task: add-to-gcp-dns
+  - task: remove-from-gcp-dns
     file: ci/scripts/common/manage-gcp-dns/task-terraforming.yml
     params:
       GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
