--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -57,7 +57,7 @@ resources:
   source:
     api_token: ((pivnet_token))
     product_slug: cf
-    product_version: ^2\.1\.\d+$
+    product_version: ^d+\.d+\.\d+$
     sort_by: semver
 
 - name: terraforming-vsphere
