--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -219,8 +219,8 @@ jobs:
   - task: delete-installation
     file: pcf-releng-ci/tasks/environment/delete-installation/task.yml
     params:
-      OM_USERNAME: {{om_username}}
-      OM_PASSWORD: {{om_password}}
+      OPSMAN_USERNAME: {{om_username}}
+      OPSMAN_PASSWORD: {{om_password}}
       OPSMAN_URL_SUFFIX: gcp.infrastructure.cf-app.com
     input_mapping:
       environment: env-state-gcp
