--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -2082,7 +2082,7 @@ jobs:
     - {{vsphere_network_name}}
     params:
       BBL_VSPHERE_NETWORK: {{vsphere_network_name}}
-      BBL_VSPHERE_SUBNET: {{vsphere_subnet}}
+      BBL_VSPHERE_SUBNET: {{vsphere_concourse_subnet}}
       BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
       BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
       BBL_VSPHERE_VCENTER_PASSWORD: {{vsphere_vcenter_password}}
