--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1112,7 +1112,7 @@ jobs:
         BBL_STATE_DIR: bbl-gcp-concourse
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
         BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1184,7 +1184,7 @@ jobs:
           BBL_STATE_DIR: bbl-gcp-concourse
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1233,7 +1233,7 @@ jobs:
           BBL_STATE_DIR: bbl-gcp-concourse
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1335,7 +1335,7 @@ jobs:
         BBL_AZURE_CLIENT_ID: {{azure_client_id}}
         BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
         BBL_AZURE_REGION: {{azure_location}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1416,7 +1416,7 @@ jobs:
           BBL_AZURE_CLIENT_ID: {{azure_client_id}}
           BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
           BBL_AZURE_REGION: {{azure_location}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1471,7 +1471,7 @@ jobs:
           BBL_AZURE_CLIENT_ID: {{azure_client_id}}
           BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
           BBL_AZURE_REGION: {{azure_location}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1560,7 +1560,7 @@ jobs:
         BBL_STATE_DIR: bbl-aws-concourse
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1632,7 +1632,7 @@ jobs:
           BBL_STATE_DIR: bbl-aws-concourse
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1681,7 +1681,7 @@ jobs:
           BBL_STATE_DIR: bbl-aws-concourse
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -1902,7 +1902,7 @@ jobs:
         BBL_STATE_DIR: bbl-aws-cf
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1949,7 +1949,7 @@ jobs:
           BBL_STATE_DIR: bbl-aws-cf
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2028,7 +2028,7 @@ jobs:
         BBL_IAAS: gcp
         BBL_STATE_DIR: bbl-lite-gcp
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -2071,7 +2071,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-lite-gcp
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2109,7 +2109,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-lite-gcp
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2200,7 +2200,7 @@ jobs:
       params:
         BBL_STATE_DIR: bbl-gcp-cf
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -2237,7 +2237,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2293,7 +2293,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2351,7 +2351,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2511,7 +2511,7 @@ jobs:
         BBL_STATE_DIR: bump-deployments/bbl-gcp-concourse
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
         BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -2583,7 +2583,7 @@ jobs:
           BBL_STATE_DIR: bump-deployments/bbl-gcp-concourse
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2632,7 +2632,7 @@ jobs:
           BBL_STATE_DIR: bump-deployments/bbl-gcp-concourse
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2735,7 +2735,7 @@ jobs:
         BBL_AZURE_CLIENT_ID: {{azure_client_id}}
         BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
         BBL_AZURE_REGION: {{azure_location}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -2816,7 +2816,7 @@ jobs:
           BBL_AZURE_CLIENT_ID: {{azure_client_id}}
           BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
           BBL_AZURE_REGION: {{azure_location}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2871,7 +2871,7 @@ jobs:
           BBL_AZURE_CLIENT_ID: {{azure_client_id}}
           BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
           BBL_AZURE_REGION: {{azure_location}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -2961,7 +2961,7 @@ jobs:
         BBL_STATE_DIR: bump-deployments/bbl-aws-concourse
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -3033,7 +3033,7 @@ jobs:
           BBL_STATE_DIR: bump-deployments/bbl-aws-concourse
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3082,7 +3082,7 @@ jobs:
           BBL_STATE_DIR: bump-deployments/bbl-aws-concourse
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3175,7 +3175,7 @@ jobs:
         BBL_STATE_DIR: bump-deployments/bbl-aws-cf
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -3222,7 +3222,7 @@ jobs:
           BBL_STATE_DIR: bump-deployments/bbl-aws-cf
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3302,7 +3302,7 @@ jobs:
         BBL_IAAS: gcp
         BBL_STATE_DIR: bump-deployments/bbl-lite-gcp
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -3345,7 +3345,7 @@ jobs:
         params:
           BBL_STATE_DIR: bump-deployments/bbl-lite-gcp
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3383,7 +3383,7 @@ jobs:
         params:
           BBL_STATE_DIR: bump-deployments/bbl-lite-gcp
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3475,7 +3475,7 @@ jobs:
       params:
         BBL_STATE_DIR: bump-deployments/bbl-gcp-cf
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -3512,7 +3512,7 @@ jobs:
         params:
           BBL_STATE_DIR: bump-deployments/bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3568,7 +3568,7 @@ jobs:
         params:
           BBL_STATE_DIR: bump-deployments/bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3626,7 +3626,7 @@ jobs:
         params:
           BBL_STATE_DIR: bump-deployments/bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
@@ -3756,7 +3756,7 @@ jobs:
       - bbl-up-gcp-concourse-director-bump-deployments
       - bbl-up-vsphere-concourse-director-bump-deployments
       trigger: true
-  - get: bbl-version
+  - put: bbl-version
     resource: version
     params:
       bump: patch
