trigger on new versions of terraform-provider-vsphereovf
[#158927714]

Signed-off-by: Christopher Hunter <hunter.christopher@icloud.com>

--- a/pipelines/ovf-provider.yml
+++ b/pipelines/ovf-provider.yml
@@ -17,6 +17,7 @@ jobs:
   plan:
   - aggregate:
     - get: terraform-provider-vsphereovf
+      trigger: true
     - get: ci
       resource: infrastructure-ci
   - task: unit-tests
