--- a/pipelines/ovf-provider.yml
+++ b/pipelines/ovf-provider.yml
@@ -1,4 +1,11 @@
 ---
+resource_type:
+- name: file-url
+  type: docker-image
+  source:
+    repository: pivotalservices/concourse-curl-resource
+    tag: latest
+
 resources:
 - name: terraform-provider-vsphereovf
   type: git
@@ -12,6 +19,18 @@ resources:
     branch: master
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
 
+- name: core-os-ovf
+  type: file-url
+  source:
+    url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_vmware_ova.ovf
+    filename: core-os.ovf
+
+- name: core-os-ova
+  type: file-url
+  source:
+    url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_vmware_ova.ova
+    filename: core-os.ova
+
 jobs:
 - name: test-ovf-provider
   plan:
@@ -22,3 +41,35 @@ jobs:
       resource: infrastructure-ci
   - task: unit-tests
     file: ci/scripts/ovf-provider/unit-tests/task.yml
+
+- name: acceptance-tests
+  plan:
+  - aggregate:
+    - get: terraform-provider-vsphereovf
+      trigger: true
+      passed: [test-ovf-provider]
+      tags:
+      - {{vsphere_network_name}}
+    - get: ci
+      resource: infrastructure-ci
+      tags:
+      - {{vsphere_network_name}}
+    - get: core-os-ova
+      tags:
+      - {{vsphere_network_name}}
+    - get: core-os-ovf
+      tags:
+      - {{vsphere_network_name}}
+  - task: run-acceptance-tests
+    file: ci/scripts/ovf-provider/acceptance-tests/task.yml
+    tags:
+    - {{vsphere_network_name}}
+    params:
+      VSPHERE_FOLDER: {{vsphere_vcenter_templates}}
+      VSPHERE_DATACENTER: {{vsphere_vcenter_dc}}
+      VSPHERE_RESOURCE_POOL: {{vsphere_vcenter_rp}}
+      VSPHERE_DATASTORE: {{vsphere_vcenter_ds}}
+      VSPHERE_NETWORK: {{vsphere_network_name}}
+      VSPHERE_USER: {{vsphere_vcenter_user}}
+      VSPHERE_PASSWORD: {{vsphere_vcenter_password}}
+      VSPHERE_SERVER: {{vsphere_vcenter_ip}}
