--- a/pipelines/ovf-provider.yml
+++ b/pipelines/ovf-provider.yml
@@ -23,13 +23,13 @@ resources:
   type: file-url
   source:
     url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_vmware_ova.ovf
-    filename: core-os.ovf
+    filename: coreos_production_vmware_ova.ovf
 
 - name: core-os-ova
   type: file-url
   source:
     url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_vmware_ova.ova
-    filename: core-os.ova
+    filename: coreos_production_vmware_ova.ova
 
 - name: core-os-vmdk
   type: file-url
