fix workdir in bbl-state-resource-bbl-dev
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/dockerfiles/bbl-state-resource-bbl-dev/Dockerfile
+++ b/dockerfiles/bbl-state-resource-bbl-dev/Dockerfile
@@ -1,7 +1,7 @@
 FROM cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev as bbl-dev
 
 FROM golang:alpine as golang
-WORKDIR /go/src/github.com/cloudfoundry/
+WORKDIR /go/src/github.com/cloudfoundry/bbl-state-resource
 COPY . .
 
 ENV CGO_ENABLED 0
